@@ -137,9 +137,9 @@ void AssetTile::selectColor(int index) {
 	m_ui.color->setColor(0, color);
 	m_ui.color->update();
 
-	uint32_t r = M_R8(color);
-	uint32_t g = M_G8(color);
-	uint32_t b = M_B8(color);
+	uint32_t r = ((color & 0xF8) * 0x21) >> 5;
+	uint32_t g = (((color >> 8) & 0xF8) * 0x21) >> 5;
+	uint32_t b = (((color >> 16) & 0xF8) * 0x21) >> 5;
 	m_ui.r->setText(tr("0x%0 (%1)").arg(r, 2, 16, QChar('0')).arg(r, 2, 10, QChar('0')));
 	m_ui.g->setText(tr("0x%0 (%1)").arg(g, 2, 16, QChar('0')).arg(g, 2, 10, QChar('0')));
 	m_ui.b->setText(tr("0x%0 (%1)").arg(b, 2, 16, QChar('0')).arg(b, 2, 10, QChar('0')));
