@@ -7,6 +7,7 @@ Emulation fixes:
 Other fixes:
  - Qt: Only dynamically reset video scale if a game is running
  - Qt: Fix race condition with proxied video events
+ - Qt: Fix color selection in asset view (fixes mgba.io/i/1648)
 
 0.8.0: (2020-01-21)
 Features:
